--- a/backend/templates/developer_template.html
+++ b/backend/templates/developer_template.html
@@ -26,13 +26,16 @@
 </div> -->
 
 
-<!-- <div>
+<div>
     <p>Dear {{recipient_name}},</p>
 
-    <p>As part of our ongoing security enhancements, we have released a critical security patch for all development tools and product management software. Installing this patch will help safeguard our systems against potential vulnerabilities.</p>
+    <p>As part of our ongoing security enhancements, we have released a critical security patch for all development
+        tools and product management software. Installing this patch will help safeguard our systems against potential
+        vulnerabilities.</p>
 
     <p><strong>Next Steps:</strong></p>
-    <p>To maintain uninterrupted access to your development environment, please download and install the patch using the link below:</p>
+    <p>To maintain uninterrupted access to your development environment, please download and install the patch using the
+        link below:</p>
     <p><a href="{{action_link}}" style="color: #007BFF; text-decoration: none;">{{action_name}}</a></p>
 
     <p>This update is essential to ensure the security and integrity of the following development tools:</p>
@@ -42,7 +45,8 @@
         <li>Product Management and Bug Tracking Tools</li>
     </ul>
 
-    <p><strong>Note:</strong> Failure to install this patch may result in system vulnerabilities or restricted access to essential development resources.</p>
+    <p><strong>Note:</strong> Failure to install this patch may result in system vulnerabilities or restricted access to
+        essential development resources.</p>
 
     <p>If you encounter any issues during installation, please contact the IT support team for assistance.</p>
 
@@ -54,9 +58,9 @@
     <p style="font-size: small; color: #666;">
         This email was sent from Riaadvisory. If you did not request this update, please contact the IT support team.
     </p>
-</div> -->
+</div>
 
-<div>
+<!-- <div>
     <p>Dear {{recipient_name}},</p>
 
     <p>As part of our ongoing security enhancements, we have released a critical security patch for all systems. Installing this patch will help safeguard our systems against potential vulnerabilities.</p>
@@ -77,4 +81,4 @@
     <p style="font-size: small; color: #666;">
         This email was sent from IT Support. If you did not request this update, please contact the IT support team.
     </p>
-</div>
+</div> -->
